Colab kullanılarak oluşturuldu

--- a/2 - Programlamaya Giriş.ipynb
+++ b/2 - Programlamaya Giriş.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "9C1vs92_lM_K",
         "outputId": "9d0da9f7-90a1-4094-dffa-8245c4052b19",
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "huDM23MqlM_K",
         "outputId": "f32cc457-8ea3-4471-8166-2897916bddb5",
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "dyWqiWTilM_L",
         "outputId": "58974fb4-2886-4d4f-e0de-82d6ab6e88e4",
@@ -242,10 +242,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "id": "oPSFQLV5lM_L",
-        "outputId": "a2d970a8-ab0a-4cd2-c46b-8b9f266f5503",
+        "outputId": "77d2eaa7-9895-4a25-8977-72b374c1151d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -256,18 +256,20 @@
           "name": "stdout",
           "text": [
             "Hello\n",
-            "World\n"
+            "World\n",
+            "Gizem Tunçdemir\n"
           ]
         }
       ],
       "source": [
         "print(\"Hello\")\n",
-        "print(\"World\")"
+        "print(\"World\")\n",
+        "print(\"Gizem Tunçdemir\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "2GOBY2OilM_M",
         "outputId": "d114ec0c-c54d-403e-fa5e-e10145fcd9ad",
@@ -292,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "lIwvlBQDlM_M",
         "outputId": "50de71a7-f147-4c9e-917f-d7ec839c9c1c",
@@ -319,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "g79JUSYHlM_M",
         "outputId": "5dbe8325-eae0-4975-dd98-54a170c868d6",
@@ -343,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "5hK0Wn1GlM_N",
@@ -396,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "OcRFK1CuYIWE",
         "tags": []
@@ -410,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "FBcu1JFBMBnt",
         "tags": [],
@@ -460,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -508,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -552,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "ZtNQtpJLlM_P",
         "outputId": "ff99107b-e044-425e-9680-a6fc8724c60e",
@@ -652,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "37NHDb3R8bWW",
         "tags": []
@@ -667,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "zA5V7rLBlM_Q",
         "outputId": "c4d0d387-dcdc-4bc3-a339-8aca6a0f1d64",
@@ -699,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "789rNp7llM_Q",
@@ -747,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "EBaJL4EGoipu"
       },
@@ -794,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "bD6m2mWNMckv"
       },
@@ -806,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -833,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -857,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -884,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -911,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "5Cr3l-r2xLLe"
       },
@@ -923,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "q1AS252AlM_W",
@@ -950,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -978,7 +980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1050,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1089,7 +1091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1122,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "7JgjyKcelM_Y",
@@ -1167,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "eRGkkMl_lM_Z",
@@ -1204,7 +1206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "yUDg8UWTlM_Z",
         "outputId": "908c70cd-d05a-4480-d4e5-976773fab586",
@@ -1236,7 +1238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "POfOSjm_yXa_",
         "outputId": "e38327a1-a7ce-4a3b-c41e-7ee8bee65fde",
@@ -1280,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "m0BEZkn3Sor1"
       },
@@ -1291,7 +1293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "jABrMAhrlM_a",
@@ -1318,7 +1320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "AZMcDsEWlM_a",
         "outputId": "758fcaf7-ddab-48e2-9f38-284a107b1f71",
@@ -1354,7 +1356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1378,7 +1380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1405,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "5vWgxh6clM_b",
         "outputId": "3e598a44-af68-49ae-b272-3861e7de5085",
@@ -1474,7 +1476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1508,7 +1510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1542,7 +1544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1566,7 +1568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1599,7 +1601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1635,7 +1637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1705,7 +1707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "U-MSEUYI_5Eh"
       },
@@ -1745,7 +1747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1802,7 +1804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "nNZQtidr1qE5",
         "outputId": "c40451b7-606a-48f5-f600-f19999ef4484",
@@ -1841,7 +1843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "NfL5jUhc2HcV"
       },
@@ -1852,7 +1854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "7EWK8Y4HlM_f",
@@ -1885,7 +1887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "Q37fs5WH4VnE",
         "outputId": "4bc9fefb-600c-4d8b-c9e2-13d9bbf59413",
@@ -1924,7 +1926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "4h4aEqtp4gCO",
         "outputId": "f6b3c367-f6dd-464e-fbd0-adfe8251b10a",
@@ -1972,7 +1974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "XUbUMUE5lM_f"
       },
@@ -1983,7 +1985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "E5m5hTPNlM_g",
@@ -2010,7 +2012,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "SrOMuBFylM_g"
       },
@@ -2021,7 +2023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "LxZIrqfOlM_g",
         "outputId": "3518b41e-5914-4781-d8d3-c40eca7276d2",
@@ -2047,7 +2049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "FcDVsCCAlM_g"
       },
@@ -2060,7 +2062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "IMJwJz4vlM_g",
@@ -2087,7 +2089,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "BGLv61v_lM_g",
         "outputId": "f19d63c1-cb91-4198-bdf4-7d6d7995fb14",
@@ -2114,7 +2116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "XpA53VY5lM_g",
         "outputId": "89b1ae89-5f66-4e3a-ad54-ad7f457bc09d",
@@ -2138,7 +2140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "0-XiY3AflM_h",
         "outputId": "47d61474-8a36-4a74-8d97-7e70929e5ded",
@@ -2162,7 +2164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "Tfk1BxuZlM_h",
         "outputId": "e5ae44d3-ca35-478f-d22e-732f42ce8bac",
@@ -2252,7 +2254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "6fzkXmUSlM_h",
         "outputId": "d5f31060-5903-4a15-ad9f-fdac0ea8381b",
@@ -2278,7 +2280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "6Nilyh6plM_i",
         "outputId": "ee0d9a7d-7788-4593-f738-d23dfbc893f1",
@@ -2304,7 +2306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "AT_xe8oxlM_i",
         "outputId": "fc609b23-7b50-4035-aece-5d9e960fd70c",
@@ -2410,7 +2412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2483,7 +2485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2534,7 +2536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "FPMNGgWAlM_j",
         "outputId": "3a8af3c7-880b-4f7c-c06b-c55137fa2af7",
@@ -2562,7 +2564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2604,7 +2606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "P5LKYBjJlM_j",
         "outputId": "83ba15cf-b916-4e40-f3ec-0479297313d8",
@@ -2637,7 +2639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "KuNKkh9llM_k",
         "outputId": "060266a1-4846-418e-edca-a3930e696b09",
@@ -2690,7 +2692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "O4DksbuykogD",
         "outputId": "aba3477c-6148-4947-9cc0-f58599543305",
@@ -2737,7 +2739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "4hnGz-lVlM_k"
       },
@@ -2752,7 +2754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "BnWV8HMulM_l",
@@ -2779,7 +2781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "NbvoaciLlM_l"
@@ -2797,7 +2799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "yBejozjqlM_l",
@@ -2839,7 +2841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "3xEbBp1NlM_l",
         "outputId": "1cf2bd28-3080-4deb-87b2-6ef4a2e300c5",
@@ -2869,7 +2871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "kfBWzwX5lM_l",
         "outputId": "930f2066-9fea-490b-845f-e76328841965",
@@ -2901,7 +2903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "tags": [],
         "id": "ex1PVZEjlM_l",
@@ -2940,7 +2942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "btDbBgbZlM_l",
         "outputId": "87bdcf87-d391-46ac-ba15-ea38a2833e98",
